--- a/package.json
+++ b/package.json
@@ -8,18 +8,13 @@
   "dependencies": {
     "async": "^3.2.0",
     "bootstrap": "^4.6.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-validator": "^6.9.2",
+    "express": "^4.16.4",
     "faker": "^5.4.0",
-    "g": "^2.0.1",
     "helmet": "^4.4.1",
     "http-errors": "^1.6.3",
-    "json-server": "^0.16.3",
-    "luxon": "^1.26.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "morgan": "^1.9.1",
